<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueLite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/util_titlebar_background"
        android:orientation="horizontal"
        android:id="@+id/linearLayout126"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp">

            <Button
                android:id="@+id/g50_p26_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:background="@drawable/util_titlebar_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView280"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#fff"
                android:textSize="16dp"
                android:text="@string/login"
                android:layout_marginRight="30dp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/g50_p26_group1_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/linearLayout52"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginBottom="-3dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:id="@+id/g50_p26_id_mail"
                        android:background="@drawable/util_textview_bk_pink"
                        android:layout_weight="1"
                        android:hint="ID (メールアドレス）"
                        android:layout_marginBottom="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/g50_p26_password"
                        android:singleLine="true"
                        android:background="@drawable/util_textview_bk_pink"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:hint="パスワード"
                        android:layout_marginBottom="10dp" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:id="@+id/g50_p26_login_submit"
                        android:background="@drawable/util_com_button_1"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textSize="16dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp" />

                    <LinearLayout
                        android:id="@+id/linearLayout55"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="2">

                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_login"
                            android:id="@+id/g50_p26_auto_login"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:checked="false"
                            android:textSize="12dp"
                            android:button="@drawable/util_checkbox_img"
                            android:padding="10dp"
                            android:layout_weight="1" />

                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/password_display"
                            android:id="@+id/g50_p26_pass_display"
                            android:textColor="@color/black"
                            android:checked="false"
                            android:padding="10dp"
                            android:button="@drawable/util_checkbox_img"
                            android:textSize="12dp"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/linearLayout56"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout59"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/util_com_headline_1"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:gravity="center|left"
                        android:layout_marginBottom="-3dp" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:orientation="vertical"
                            android:id="@+id/linearLayout58"
                            android:layout_weight="1" >

                            <TextView
                                android:id="@+id/textView89"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:text="@string/default_setting"
                                android:textColor="@color/white"
                                android:textSize="13dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/g50_p26_member_card"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/util_com_background_1"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        android:gravity="center|left">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:orientation="vertical"
                            android:id="@+id/linearLayout92"
                            android:layout_weight="1" >

                            <TextView
                                android:id="@+id/textView133"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:text="@string/initial_setting_here"
                                android:textColor="@color/black"
                                android:textSize="13dp" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView15"
                            android:src="@drawable/ic_g09_arrow"
                            android:layout_marginRight="5dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp" >

                <LinearLayout
                    android:id="@+id/linearLayout73"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/linearLayout151"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/util_com_headline_1"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:gravity="center|left"
                        android:layout_marginBottom="-3dp" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:orientation="vertical"
                            android:id="@+id/linearLayout53"
                            android:layout_weight="1" >

                            <TextView
                                android:id="@+id/textView90"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:text="@string/not_default_setting"
                                android:textColor="@color/white"
                                android:textSize="13dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/g50_p26_forget_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/util_com_background_1"
                        android:orientation="horizontal"
                        android:padding="15dp"
                        android:gravity="center|left" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:orientation="vertical"
                            android:id="@+id/linearLayout64"
                            android:layout_weight="1" >

                            <TextView
                                android:id="@+id/textView93"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="2dp"
                                android:textSize="13dp"
                                android:text="@string/forget_password_here"
                                android:textColor="@color/black" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView22"
                            android:src="@drawable/ic_g09_arrow"
                            android:layout_marginRight="5dp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
